--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,21 @@
 .container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 360px;
-    height: 600px;
-    background-color: black;
+    height: 480px;
+    background-color: darkslategrey;
+    border-radius: 10px;
 }
 .calcHeader {
     display: flex;
     justify-content: center;
+    align-content: center;
     color: white;
 }
 
@@ -15,14 +23,18 @@
     display:flex;
     flex-direction: column;
     align-content: center;
+    justify-content: center;
 }
 
-.calcContainer .calcScreen {
+.calcContainer .calcExpression {
     display: flex;
     align-self: center;
+    align-items: center;
+    justify-content: right;
     background-color: white;
     width: 300px;
     height: 50px;
+    font-size: 24px;
 }
 
 .calcGrid {
@@ -33,6 +45,8 @@
 }
 
 .calcGrid button {
-    width: 50px;
-    height: 50px;
+    flex: 0 0 calc(25% -2px);
+    width: calc(25% - 2px);
+    height: 60px;
+    font-size: 24px;
 }
